objects/Review__c.object
<CustomObject>
    <label>Review</label>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Story_Telling__c</fullName>
        <label>Story Telling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>( Rating_Research__c + Rating_Research__c + Story_Writting__c )/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Writting__c</fullName>
        <label>Story Writting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Research__c</fullName>
        <label>Rating Research</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Rating_Minimum</fullName>
        <active>true</active>
        <errorConditionFormula>Rating_Research__c &gt;5 ||  Story_Telling__c&gt;5||  Story_Writting__c&gt;5</errorConditionFormula>
        <errorMessage>please enter valid value</errorMessage>
    </validationRules>
</CustomObject>